# emulate

./: .gitignore
experimentscode/: Dockerfile-BG  Dockerfile-FL  README.md  clear_containers.sh  main.py  network_stats.sh  prepare_dataset.py  pyproject.toml  requirements.txt  run_and_monitor_exp.py  settings.toml  start_iperf.sh  topohub_bg_gen.py  topohub_topology.py
experimentscode/fedlearning/: FlowerClient.py  FlowerServer.py  __init__.py  my_server_class.py  task.py
